pequenas alterações na seção de downloads e alguns links adicionados

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="col-md-12 col-lg-7">
               <h1>GREaTest Card Game</h1>
               <p>Um jogo de cartas interativo para ensinar teste de software.</p>
-              <p><a href="#" class="btn btn-outline-primary border-w-2 btn-md">Contate-nos!</a></p>
+              <p><a href="https://www.great.ufc.br/" target="_blank" class="btn btn-outline-primary border-w-2 btn-md">Contate-nos!</a></p>
             </div>
           </div>
         </div>
@@ -343,7 +343,7 @@
                 <span class="d-block font-gray-5 letter-spacing-1 text-uppercase font-size-12 mb-3">Autor do Jogo</span>
                 <p class="px-3 mb-3">. </p>
                 <div class="block-social-1">
-                  <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K2738858Z5" class="">
+                  <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K2738858Z5" target="_blank">
                   Lattes</a>
                 </div>
               </div>
@@ -359,7 +359,7 @@
                   Jogo</span>
                 <p class="px-3 mb-3">. </p>
                 <div class="block-social-1">
-                  <a href="#" class="">Lattes</a>
+                  <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4429626T1" target="_blank">Lattes</a>
                 </div>
               </div>
             </div>
@@ -373,7 +373,7 @@
                 <span class="d-block font-gray-5 letter-spacing-1 text-uppercase font-size-12 mb-3">Coordenadora</span>
                 <p class="px-3 mb-3">.</p>
                 <div class="block-social-1">
-                  <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4727975T0" class="">
+                  <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4727975T0" target="_blank">
                     Lattes</a>
                 </div>
               </div>
@@ -392,7 +392,7 @@
                   Jogo</span>
                 <p class="px-3 mb-3">.</p>
                 <div class="block-social-1">
-                  <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8682827D7" class="">
+                  <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8682827D7" target="_blank">
                     Lattes</a>
                   
                 </div>
@@ -408,7 +408,7 @@
                 <span class="d-block font-gray-5 letter-spacing-1 text-uppercase font-size-12 mb-3">Coordenador</span>
                 <p class="px-3 mb-3">. </p>
                 <div class="block-social-1">
-                  <a href="#" class="">Lattes</a>
+                  <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4242391T1" target="_blank">Lattes</a>
                 </div>
               </div>
             </div>
@@ -422,7 +422,7 @@
                 <span class="d-block font-gray-5 letter-spacing-1 text-uppercase font-size-12 mb-3">Gerente</span>
                 <p class="px-3 mb-3">.</p>
                 <div class="block-social-1">
-                  <a href="#" class="">Lattes</a>
+                  <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4504619J7" target="_blank">Lattes</a>
                 </div>
               </div>
             </div>
@@ -440,7 +440,7 @@
                 <span class="d-block font-gray-5 letter-spacing-1 text-uppercase font-size-12 mb-3">Desenvolvedor</span>
                 <p class="px-3 mb-3">.</p>
                 <div class="block-social-1">
-                  <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K2722520P1" class="">Lattes</a>
+                  <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K2722520P1" target="_blank">Lattes</a>
                 </div>
               </div>
             </div>
@@ -454,7 +454,7 @@
                 <span class="d-block font-gray-5 letter-spacing-1 text-uppercase font-size-12 mb-3">Designer</span>
                 <p class="px-3 mb-3">.</p>
                 <div class="block-social-1">
-                  <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4360273E7" class="">Lattes</a>
+                  <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4360273E7" target="_blank">Lattes</a>
                 </div>
               </div>
             </div>
@@ -462,13 +462,13 @@
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
               <div class="block-team-member-1 text-center rounded">
                 <figure>
-                  <img src="images/avatar-icon.jpg" alt="Image" class="img-fluid rounded-circle">
+                  <img src="images/Great/bosco.jpg" alt="Image" class="img-fluid rounded-circle">
                 </figure>
                 <h3 class="font-size-20 text-black">Jõao Bosco Filho</h3>
                 <span class="d-block font-gray-5 letter-spacing-1 text-uppercase font-size-12 mb-3">Designer</span>
                 <p class="px-3 mb-3">.</p>
                 <div class="block-social-1">
-                  <a href="#" class="">Lattes</a>
+                  <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K2150862E8" target="_blank">Lattes</a>
                 </div>
               </div>
             </div>
@@ -501,7 +501,9 @@
             <div class="h-100 col-lg-3 col-md-6 mb-4 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
               <div class="block-team-member-1 text-center rounded">
                 <figure>
-                  <img src="images/logos/ufc.png" alt="Image" class="img-fluid ">
+                  <a href="http://www.ufc.br/" target="_blank">
+                    <img src="images/logos/ufc.png" alt="Image" class="img-fluid ">
+                  </a> 
                 </figure>
                 <span class="d-block font-gray-5 letter-spacing-1 text-uppercase font-size-12 mb-3">Universidade Federal
                   do Ceará</span>
@@ -611,8 +613,8 @@
       <div class="row">
 
         <!-- div do texto -->
-        <div class="col-lg-4">
-          <h2 class="text-black">
+        <div class="col-lg-4 col-4">
+          <h2 class="text-black text-right">
             Faça também o download do nosso aplicativo!
           </h2>
         </div>
@@ -629,8 +631,8 @@
         <!-- div dos prints -->
 
         <div class="row p-4">
-          <div class="col-lg-6">
-            <div class="owl-carousel slide-one-item">
+          <div class="col-lg-6 align-items-center justify-content-center text-center">
+            <div class="owl-carousel slide-one-item ">
 
               <div class="container">
                 <img src="images/images wireframe/solidColors/green.png" alt="Image" class="img-fluid">
