mudando uma imagem no painel e contatos no footer

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="row align-items-center">
             <div class="col-md-12 col-lg-7">
               <h1>GREaTest Card Game</h1>
-              <p>Um jogo de cartas interativo para ensinar teste de software.</p>
+              <p>Um jogo de cartas para o ensino de teste de software.</p>
               <p><a href="https://www.great.ufc.br/" target="_blank" class="btn btn-outline-primary border-w-2 btn-md">Contate-nos!</a></p>
             </div>
           </div>
@@ -165,7 +165,7 @@
             </div>
           </div>
 
-          <div class="rounded col-6 col-lg-6" style="background-image: url('images/painel/painel-2.jpg'); min-height: 390px;">
+          <div class="rounded col-6 col-lg-6" style="background-image: url('images/painel/cartas exemplo.png'); min-height: 390px;">
           </div>
         </div>
       </div>
@@ -937,10 +937,18 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 ml-auto">
+        <!-- <div class="col-md-4 ml-auto">
 
           <h2 class="footer-heading mb-4">Follow Us</h2>
           <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+
+        </div> -->
+        <div class="col-md-4 ml-auto">
+
+          <h2 class="footer-heading mb-4">Contact</h2>
+          <a href="#" class="row pl-3 pr-3">Rossana Andrade: rossana@ufc.br</a>
+          <a href="#" class="row pl-3 pr-3">Bruno Sabóia: bruno@great.ufc.br</a>
+          <a href="#" class="row pl-3 pr-3">Ismayle Santos: ismaylesantos@great.ufc.br</a>
 
         </div>
       </div>
@@ -949,7 +957,7 @@
           <div class="border-top pt-2">
             <p>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;
+              Copyright &copy; GREat
               <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
               with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
                 target="_blank">Colorlib</a>
